fix: emoji search, vertical scrollbar in group creation

--- a/app/style/modal/group-creation.less
+++ b/app/style/modal/group-creation.less
@@ -33,6 +33,7 @@
     margin: 0;
     overflow: hidden;
     width: 100%;
+    height: 412px;
     flex-grow: 1;
   }
 
@@ -85,6 +86,7 @@
   }
 
   user-list {
+    overflow-x: hidden;
     .search-list-item {
       align-items: center;
       margin: 0 16px;
